# buffshortener

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt  routes.py
api/auth/: auth_config.py  manager.py  routes.py  schemas.py
api/auth/features/email/: email_config.py  signupEmailTemplate.py
api/auth/models/: userModels.py
api/db/: connect.py
api/db/models/: model.py
api/features/: shortenUrl.py
api/features/Session/: getSession.py
app/: globals.css  layout.tsx  page.tsx
app/actions/forms/: loginSubmit.ts  urlSubmit.ts
app/actions/verification/: verifyAction.ts
app/api/session/: route.ts
app/auth/verification/: actions.ts  page.tsx
app/components/background/: particle-background.tsx  particlesjs-config.json
app/components/footer/: footer.module.css  footer.tsx
app/components/header/: header.module.css  header.tsx
app/components/login/: login.module.css  login.tsx
app/components/login/forms/login/: loginForm.module.css  loginForm.tsx  loginSubmit.ts
app/components/login/forms/signup/: signupForm.module.css  signupForm.tsx  signupSubmit.ts
app/components/login/login-btn/: login-btn.module.css  login-btn.tsx
app/components/loginModal/: login.module.css  login.tsx
app/components/session/: getUser.ts  logout.ts  session-init.tsx
app/components/url-input/: url-input.module.css  url-input.tsx
app/components/url-input/form/: formsubmit.ts
app/components/url-list/: actions.ts  url-list.module.css  url-list.tsx
(+6 files in other folders)
