[project]
name = "buff-shortener"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib==5.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "bcrypt==5.0.0",
    "beanie==2.0.1",
    "blinker==1.9.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "fastapi==0.129.0",
    "fastapi-mail==1.6.2",
    "fastapi-users==15.0.4",
    "fastapi-users-db-beanie==5.0.0",
    "h11==0.16.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "lazy-model==0.4.0",
    "makefun==1.16.0",
    "MarkupSafe==3.0.3",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "PyJWT==2.11.0",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "regex==2025.11.3",
    "starlette==0.52.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.41.0"
]

[project.scripts]
app = "api.index:app"
